<resources>
    <string name="app_name">扬飞智家</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
    <string name="download_again_tip">更新文件不完整，正在重新下载</string>
    <string name="downloaded">更新已下载完成</string>
    <string name="index">首页</string>
    <string name="mine">我的</string>
    <string name="local_phone_one_key_login">本机号码一键登录</string>
    <string name="other_phone_login">其他手机号码登录</string>
    <string name="login_representative_agrees">登录代表同意</string>
    <string name="comma">、</string>
    <string name="privacy_policy">《隐私政策》</string>
    <string name="user_agreement">《用户协议》</string>
    <string name="suggest_hint">请输入您的意见，扬飞感谢您的使用。</string>
    <string name="family_name_hint">请输入家庭名称...</string>
    <string name="contact_details">联系方式</string>
    <string name="contact_hint">请输入联系方式（非必填）</string>
    <string name="commit">提交</string>
    <string name="commit_with_log">发送问题日志并提交</string>
    <string name="yc_ai">扬飞智能</string>
    <string name="check_version_update">检查版本更新</string>
    <string name="logout">退出登录</string>
    <string name="sure">确定</string>
    <string name="skip">跳过</string>
    <string name="edit_name_hint">请输入昵称…</string>
    <string name="add_open_type">添加</string>
    <string name="pwd_name">密码名称</string>
    <string name="pwd_name_hint">请输入密码名称</string>
    <string name="pwd_number_hint">请输入6位数密码</string>
    <string name="pwd_type">密码时效</string>
    <string name="valid_date">有效日期</string>
    <string name="valid_time">有效时段</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="start_date">开始时段</string>
    <string name="end_date">结束时段</string>
    <string name="pwd_seting">设置密码</string>
    <string name="camera">相机</string>
    <string name="choose_from_pics">从手机相册选择</string>
    <string name="door_lock_sound_size">门锁音量</string>
    <string name="door_lock_sound_size_desp">包含门锁唤醒音量、按键音量、错况提示音量等</string>
    <string name="low">低</string>
    <string name="mid">中</string>
    <string name="high">高</string>
    <string name="del_open_type">删除</string>
    <string name="_86">+86</string>
    <string name="please_input_phone_number">请输入手机号</string>
    <string name="get_sms_code">获取短信验证码</string>
    <string name="get_code_tip">未注册的手机号验证号后自动创建账号</string>
    <string name="finish_open_type">完成</string>
    <string name="please_input_sign_code">请输入验证码</string>
    <string name="common_problem">常见问题</string>
    <string name="feed_back_question">反馈问题</string>
    <string name="no_data_now">暂无数据</string>
    <string name="connect_fail_swipe_refresh_retry">网络出错了,下拉刷新重试</string>
    <string name="find_new_version">发现新版本</string>
    <string name="yf_smart_door_lock">扬飞智能门锁</string>
    <string name="upload_pic">上传图片</string>
    <string name="contact_way">联系方式&#12288;</string>
    <string name="feed_back_contact_et_hint">为快速解决问题，请留下联系方式</string>
    <string name="input_router_hint">请输入路由器型号（可选）</string>
    <string name="et_question_hint">请描述您遇到的问题...</string>
    <string name="router_model">路由器型号</string>
    <string name="pwd">密码</string>
    <string name="safe_pwd">安全密码</string>
    <string name="safe_pwd_desp">查看设备时需要验证密码</string>
    <string name="change_safe_pwd">更改安全密码</string>
    <string name="finger">指纹</string>
    <string name="fingerprint_unlock">指纹解锁</string>
    <string name="fingerprint_unlock_desp">查看设备时需要验证指纹</string>
    <string name="pwd_tip">请牢记密码，忘记后将无法找回，仅能通过重新添加设备到扬飞智能APP中后清除密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="_6_number_safe_pwd">6位数字安全密码</string>
    <string name="scan_qa_title">扫描不到要添加的设备怎么办？</string>
    <string name="scan_qa_answer">可能由于当前网络环境较差或设备已被他人绑定。\n\n1、请确保手机与设备之间的距离足够近，并且周围网络环境没有强干扰。\n\n2、同时需确认扬飞智能应用的定位权限未被关闭。若手动关闭了应用定位权限可能会导致无法自动发现设备。\n\n3、如果仍始终无法发现设备，可能因为设备已经被他人绑定了。如果你并不清楚是谁连接了设备，可以进行重置，重置方式请查阅说明书。\n\n4、蓝牙设备请检查设备是否正常通电，手机蓝牙是否已经打开。</string>
    <string name="find_nearby_can_connect_devices">发现附近可以连接的设备</string>
    <string name="rescan">再次扫描</string>
    <string name="choose_device_work_wifi">选择设备工作Wi-Fi</string>
    <string name="set_wifi_tip">此设备只支持使用2.4G Wi-Fi连接使用\nWi-Fi名称仅支持英文字符及数字</string>
    <string name="please_input_wifi_name">请先选择Wi-Fi</string>
    <string name="please_input_wifi_pwd">请输入Wi-Fi密码</string>
    <string name="next">下一步</string>
    <string name="connecting_tip">设备连接中...请稍等</string>
    <string name="connecting_tip_detail">尽量使您的路由器、手机和设备互相靠近</string>
    <string name="wift_connect_success">设备配网成功</string>
    <string name="device_add_success">设备添加成功</string>
    <string name="edit_name">修改名称</string>
    <string name="please_input_lock_name">请输入门锁名称</string>
    <string name="device_connect_fail">设备连接失败</string>
    <string name="please_reset_work_wifi">请重新设置工作WiFi</string>
    <string name="delete_device">删除设备</string>
    <string name="temp">临时密码</string>
    <string name="device_share">设备共享</string>
    <string name="agree">同意</string>
    <string name="no_device_share">没有设备共享</string>
    <string name="agreed">已同意</string>
    <string name="add_share">+添加共享</string>
    <string name="delete">删除</string>
    <string name="share_to_yfiot_account">共享给扬飞智家账号</string>
    <string name="share_lock_tip">快来共享设备，和家人一起享受智能生活吧！</string>
    <string name="please_input_yf_smart_home_account">请输入扬飞智家的账号</string>
    <string name="wifi_config_success">WIFI配置成功</string>
    <string name="update_now">立即升级</string>



    <string-array name="lock_log_array">
        <item>日志</item>
        <item>报警</item>
    </string-array>


</resources>