<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:src="@mipmap/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.coorchice.library.SuperTextView
        android:id="@+id/stv_fast_login"
        android:layout_width="274dp"
        android:layout_height="42dp"
        android:layout_marginBottom="239dp"
        android:gravity="center"
        android:text="@string/local_phone_one_key_login"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:stv_corner="21dp"
        app:stv_shaderEnable="true"
        app:stv_shaderEndColor="#338DFC"
        app:stv_shaderMode="topToBottom"
        app:stv_shaderStartColor="#34A2FF" />

    <com.coorchice.library.SuperTextView
        android:id="@+id/stv_other"
        android:layout_width="274dp"
        android:layout_height="42dp"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/other_phone_login"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stv_fast_login"
        app:stv_corner="21dp"
        app:stv_stroke_color="#FFFFFF"
        app:stv_stroke_width="0.68dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_representative_agrees"
            android:textColor="#BDBDC1"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:textColor="#3395FD"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comma"
            android:textColor="#BDBDC1"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/tv_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textColor="#3395FD"
            android:textSize="13dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>