<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg">

    <com.yc.yfiotlock.view.widgets.BackNavBar
        android:id="@+id/bnb_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:text="创建密码"
        app:textPosition="center" />

    <TextView
        android:id="@+id/tv_creat_pwd_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="7dp"
        android:padding="8dp"
        android:text="确定"
        android:textColor="@color/blue_3091F8"
        app:layout_constraintBottom_toBottomOf="@id/bnb_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/bnb_title" />

    <LinearLayout
        android:id="@+id/ll_pwd_name"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/bnb_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/pwd_name"
            android:textColor="#222222"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_pwd_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/et_no_underline"
            android:gravity="start|center_vertical"
            android:hint="@string/pwd_name_hint"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="14dp" />
    </LinearLayout>

    <View
        android:id="@+id/view_creat_pwd_name_line"
        android:layout_width="match_parent"
        android:layout_height="1sp"
        android:background="#EDEDED"
        app:layout_constraintTop_toBottomOf="@id/ll_pwd_name" />

    <LinearLayout
        android:id="@+id/ll_pwd_type"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view_creat_pwd_name_line">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/pwd_type"
            android:textColor="#222222"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_pwd_type_the_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:background="@drawable/shap_stroke_gray"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingRight="5dp"
            android:paddingBottom="3dp"
            android:text="—次性有效"
            android:textColor="#ff222222"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_pwd_type_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="17dp"
            android:background="@drawable/shap_stroke_blue"
            android:paddingLeft="5dp"
            android:paddingTop="3dp"
            android:paddingRight="5dp"
            android:paddingBottom="3dp"
            android:text="自定义"
            android:textColor="#ff3091f8"
            android:textSize="13sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_line_time"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/valid_date"
        android:textColor="#ff999999"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@id/ll_pwd_type" />

    <com.yc.yfiotlock.view.widgets.LeftNextTextView
        android:id="@+id/lnt_start_time"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        app:des="请选择"
        app:layout_constraintTop_toBottomOf="@id/tv_line_time"
        app:text="@string/start_time" />

    <com.yc.yfiotlock.view.widgets.LeftNextTextView
        android:id="@+id/lnt_end_time"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        app:des="请选择"
        app:hindLine="true"
        app:layout_constraintTop_toBottomOf="@id/lnt_start_time"
        app:text="@string/end_time" />

    <TextView
        android:id="@+id/tv_line_date"
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="@string/valid_time"
        android:textColor="#ff999999"
        android:textSize="13dp"
        app:layout_constraintTop_toBottomOf="@id/lnt_end_time" />

    <com.yc.yfiotlock.view.widgets.LeftNextTextView
        android:id="@+id/lnt_start_date"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        app:des="请选择"
        app:layout_constraintTop_toBottomOf="@id/tv_line_date"
        app:text="@string/start_date" />

    <com.yc.yfiotlock.view.widgets.LeftNextTextView
        android:id="@+id/lnt_end_date"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/white"
        app:des="请选择"
        app:hindLine="true"
        app:layout_constraintTop_toBottomOf="@id/lnt_start_date"
        app:text="@string/end_date" />

    <LinearLayout
        android:id="@+id/ll_pwd_number"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lnt_end_date">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/pwd_name"
            android:textColor="#222222"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_pwd_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/et_no_underline"
            android:gravity="start|center_vertical"
            android:hint="@string/pwd_name_hint"
            android:maxLength="15"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="14dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>