<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBg"
    tools:context=".controller.activitys.lock.ble.FeedBackActivity">

    <com.yc.yfiotlock.view.widgets.BackNavBar
        android:id="@+id/bnb_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:text="反馈" />

    <LinearLayout
        android:id="@+id/ll_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/bnb_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:text="@string/yf_smart_door_lock"
            android:textColor="#222222"
            android:textSize="14dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="13dp"
            app:cardBackgroundColor="#F8F8F8"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/et_no_underline"
                android:gravity="start|top"
                android:textColor="#222222"
                android:textSize="14dp"
                android:textColorHint="#B6B4B4"
                android:hint="@string/et_question_hint"
                android:padding="10dp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ll_et">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="13dp"
            android:text="@string/upload_pic"
            android:textColor="#222222"
            android:textSize="14dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="12dp"
            android:background="@color/white"
            android:minHeight="77dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_contact"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_pic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/contact_way"
            android:textColor="#222222"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/et_no_underline"
            android:hint="@string/feed_back_contact_et_hint"
            android:singleLine="true"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="14dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_router"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll_contact">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/contact_way"
            android:textColor="#222222"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/et_router"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:background="@drawable/et_no_underline"
            android:hint="@string/input_router_hint"
            android:singleLine="true"
            android:textColor="#222222"
            android:textColorHint="#999999"
            android:textSize="14dp" />
    </LinearLayout>

    <com.coorchice.library.SuperTextView
        android:id="@+id/stv_send_with_log"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="@string/commit_with_log"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/stv_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:stv_corner="18dp"
        app:stv_pressBgColor="@color/pressedColor"
        app:stv_shaderEnable="true"
        app:stv_shaderEndColor="@color/color_end"
        app:stv_shaderMode="topToBottom"
        app:stv_shaderStartColor="#34A2FF" />

    <com.coorchice.library.SuperTextView
        android:id="@+id/stv_send"
        android:layout_width="330dp"
        android:layout_height="36dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="#3395FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:stv_corner="18dp"
        app:stv_pressBgColor="@color/pressedColor"
        app:stv_pressTextColor="#553395FD"
        app:stv_stroke_color="#3395FD"
        app:stv_stroke_width="0.67dp" />

</androidx.constraintlayout.widget.ConstraintLayout>