<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.activitys.lock.ble.LockShareInputActivity">

    <com.yc.yfiotlock.view.widgets.BackNavBar
        android:id="@+id/view_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:text="扬飞智能门锁共享管理" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/view_nav_bar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/share_to_yfiot_account"
            android:textColor="#222222"
            android:textSize="20dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:src="@mipmap/lock_big" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/yf_smart_door_lock"
            android:textColor="#222222"
            android:textSize="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/share_lock_tip"
            android:textColor="#999999"
            android:textSize="13dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="#F3F3F3"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/et_account"
                android:inputType="number"
                android:maxLength="11"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/et_no_underline"
                android:cursorVisible="true"
                android:gravity="center_vertical"
                android:hint="@string/please_input_yf_smart_home_account"
                android:paddingStart="14dp"
                android:textColor="#222222"
                android:textColorHint="#999999"
                android:textSize="14dp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="48dp"
        android:background="@color/view_line"
        app:layout_constraintBottom_toBottomOf="parent" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/fast_login_press"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>