<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yc.yfiotlock.view.widgets.BackNavBar
        android:id="@+id/view_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:text="" />

    <ImageView
        android:id="@+id/iv_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:src="@mipmap/fail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_nav_bar" />

    <LinearLayout
        android:id="@+id/ll_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_pic">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_connect_fail"
            android:textColor="#222222"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/connecting_tip_detail"
            android:textColor="#999999"
            android:textSize="13dp" />

    </LinearLayout>

    <com.coorchice.library.SuperTextView
        android:id="@+id/stv_reset"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/please_reset_work_wifi"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintTop_toBottomOf="@id/ll_tip"
        app:stv_corner="20dp"
        app:stv_pressBgColor="@color/pressedColor"
        app:stv_shaderEnable="true"
        app:stv_shaderEndColor="@color/color_end"
        app:stv_shaderMode="topToBottom"
        app:stv_shaderStartColor="@color/color_start" />

</androidx.constraintlayout.widget.ConstraintLayout>